added send opt api with its service,validation,method
