# src/api/dto/user.go
@@ -1,0 +1,5 @@
+package dto
+
+type GetOtpRequest struct {
+	MobileNumber string `json:"mobileNumber" binding:"required,min=11,max=11"`
+}
