# src/api/routers/users.go
@@ -1,0 +1,12 @@
+package routers
+
+import (
+	"github.com/ehsan-hosseiny/golang-web-api/api/handlers"
+	"github.com/ehsan-hosseiny/golang-web-api/config"
+	"github.com/gin-gonic/gin"
+)
+
+func User(router *gin.RouterGroup, cfg *config.Config) {
+	h := handlers.NewUsersHandler(cfg)
+	router.POST("/send-otp", h.SendOtp)
+}
